--- a/playground/templates/hello.html
+++ b/playground/templates/hello.html
@@ -9,6 +9,14 @@
     {% else %}
     <h1>Hello world</h1>
     {% endif %}
+
+    <ul>
+        {% for product in products %}
+        <li>
+            {{product}}
+        </li>
+        {% endfor %}
+    </ul>
 </body>
 </html>
 
